--- a/view/ViewInvoices.css
+++ b/view/ViewInvoices.css
@@ -73,7 +73,7 @@ ul.invoice-list li {
 
 ul.invoice-list li a {
     text-decoration: none;
-    color: #007bff;
+    color: #000;
     font-weight: bold;
 }
 
