--- a/IncomeManagement.css
+++ b/IncomeManagement.css
@@ -3,7 +3,7 @@
 body, h1, h2, p {
     margin: 0;
     padding: 0;
-    font-family: "Inter",sans-serif;
+    font-family: "Arial",sans-serif;
 
 }
 
