--- a/view/index.html
+++ b/view/index.html
@@ -12,7 +12,7 @@
 <!--</body>-->
 <!--</html>-->
 
-<!--15th/Sep/2023 by Jae Hyeok Seong release 0-->
+<!--15th/Sep/2023 by Jae release 0-->
 
 <!DOCTYPE html>
 <html lang="en">
